2005-12-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/disk.c: Add comments that bread/bwrite take the position and
	len in terms of blocks, not bytes.

2004-07-01  Savin Zlobec  <savin@elatec.si> 

 	* src/disk.c:
 	* include/disk.h:
 	* include/diskio.h:
 	Use predefined arrays for partition devices and info 
 	radher than malloc. Extended DISK_CHANNEL macro to
  	support defining maximum number of partitions.

2004-01-15  Nick Garnett  <nickg@calivar.com>

	* src/disk.c:
	* include/disk.h: Removed block_pos arguments from
	hardware driver read and write calls: it is not necessary.

	* src/disk.c (read_mbr): Modified to read a complete sector from
	the disk rather than pieces. Drivers should only ever see
	reads/writes in multiples of 512 bytes.

2003-10-16 Savin Zlobec <savin@elatec.si>

	* src/disk.c:
        Check return code from MBR scan and set
        connected flag only if there was no error.

2003-09-01 Savin Zlobec <savin@elatec.si>

        * cdl/io_disk.cdl:
        * inc/disk.h:
        * inc/diskio.h:
        * src/disk.c:
        A block device IO implementation



//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2003 Savin Zlobec 
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,